--- a/COPY-TO.env
+++ b/COPY-TO.env
@@ -5,3 +5,5 @@ PORT=3000 # port the backend server will listen on
 HTTPS=false # whether to use https or not
 HTTPS_KEY_PATH=certs/key.pem # (if HTTPS=true) path to the private key file, relative to the project root
 HTTPS_CERT_PATH=certs/cert.pem # (if HTTPS=true) path to the certificate file, relative to the project root
+
+ENVIRONMENT=development # must match the environment in knexfile.js
