--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "knex": "^3.1.0"
+    "knex": "^3.1.0",
+    "pg": "^8.16.0"
   }
 }
